--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <div class="logo-wrap">
+                        <a href="#">
+                            <img src="" alt="Logo"/>
+                        </a>
+                    </div>
+                    <ul>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">More</a></li>
+                    </ul>
+                    <div class="btn-wrap">
+                        <a href="">Free Trial</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
         <section class="highlights">
             <div class="container">
                 <div class="col-wrapper">
@@ -55,5 +75,8 @@
                 </div>
             </div>
         </section>
+        <footer>
+            
+        </footer>
     </body>
 </html>
